--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
 								</div>
 
 								<div class="logo--content">
-									<h1>JOHN <strong>DOE</strong></h1>
-									<p><strong>UX/UI</strong> DESIGNER</p>
+									<h1>NIKOS <strong>ZINAS</strong></h1>
+									<p><strong>WEB</strong> DEVELOPER</p>
 								</div>
 							</a>
 							<!-- Logo End -->
@@ -92,7 +92,7 @@
 
 						<!-- Header Custom Button Start -->
 						<div class="header--custom-btn hidden-sm hidden-xs">
-							<a href="#hireMeModal" class="btn--default" data-toggle="modal">HIRE ME</a>
+							<a href="#hireMeModal" class="btn--default" data-toggle="modal">LET'S TALK</a>
 						</div>
 						<!-- Header Custom Button End -->
 
@@ -122,11 +122,12 @@
 					<div class="vc--child">
 						<!-- Banner Content Start -->
 						<div class="banner--content">
-							<h2>Let's <span class="thick">Build</span> Something <span class="thick">Great</span> Together</h2>
+							<h2>Web developer, <span class="thick">Software Architect, </span>Public speaker, <span class="thick">Frontend aficionado</span></h2>
 
-							<p>I'm the pixel crafter based in <a href="https://en.wikipedia.org/wiki/Bangladesh" target="_blank"><strong>#Bangladesh</strong></a>.
-								I make the visual for web and mobile application to be more interactive</p>
+							<p>I'm a web developer based in <a href="https://en.wikipedia.org/wiki/Thessaloniki" target="_blank"><strong>#Thessaloniki</strong></a>.
+								In my free time, I speak at conferences or help organize community events.</p>
 
+							<p class="btn--label">Looking for a speaker?</p>
 							<a href="#contact" class="btn--default AnimateScrollLink">LET'S TALK</a>
 						</div>
 						<!-- Banner Content End -->
