--- a/index.html
+++ b/index.html
@@ -150,35 +150,28 @@
 					<div class="col-md-6">
 						<h3>WHO <strong>AM I</strong>?</h3>
 
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non vel, sint nisi possimus sunt veritatis totam velit, esse
-							pariatur in minima nostrum harum dolorum perferendis quasi dolor autem deleniti inventore.</p>
+						<p>I have been working with web technologies for over 10 years. My past positions range from small local startup to companies
+							with thousands of employess. I have filled several different kinds of roles, including senior development, team leading,
+							consulting and even technical presales.</p>
 
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non vel, sint nisi possimus sunt veritatis totam velit, esse
-							pariatur in minima nostrum harum dolorum perferendis quasi dolor autem deleniti inventore.</p>
+						<p>Even though I effectively work on both the frontend and the backend, I have a soft spot in my heart for coding complex UIs.
+							I am deeply interested in CSS architectures, UI components and living styleguides.
+						</p>
 
-						<a href="#" class="btn btn--primary" download>DOWNLOAD MY CV</a>
 					</div>
 
 					<div class="col-md-6">
 						<h3>EXPERT <strong>IN</strong></h3>
 
-						<p>Poin dui orci, pretium eget fringilla sit amet, luctus a nisl. Praesent tristique scelerisque sapien at aliquet.</p>
+						<p>Javascript, CSS, HTML, NodeJS, ES6.</p>
 
 						<!-- About Progrees Items Start -->
 						<div class="about--progress-items">
 							<!-- About Progrees Bar Start -->
-							<h4>GRAPHIC DESIGN</h4>
+							<h4>HTML &amp; CSS</h4>
 
 							<div class="progress">
-								<div class="progress-bar" data-progress="60"><span>60%</span></div>
-							</div>
-							<!-- About Progrees Bar End -->
-
-							<!-- About Progrees Bar Start -->
-							<h4>CSS</h4>
-
-							<div class="progress">
-								<div class="progress-bar" data-progress="90"><span>90%</span></div>
+								<div class="progress-bar" data-progress="95"><span>95%</span></div>
 							</div>
 							<!-- About Progrees Bar End -->
 
@@ -186,17 +179,26 @@
 							<h4>JAVASCRIPT</h4>
 
 							<div class="progress">
-								<div class="progress-bar" data-progress="70"><span>70%</span></div>
+								<div class="progress-bar" data-progress="85"><span>85%</span></div>
 							</div>
 							<!-- About Progrees Bar End -->
 
 							<!-- About Progrees Bar Start -->
-							<h4>WORDPRESS</h4>
+							<h4>NODEJS</h4>
 
 							<div class="progress">
-								<div class="progress-bar" data-progress="50"><span>50%</span></div>
+								<div class="progress-bar" data-progress="80"><span>80%</span></div>
 							</div>
 							<!-- About Progrees Bar End -->
+
+							<!-- About Progrees Bar Start -->
+							<h4>TOOLS <small>(Git, Preprocessors, Task Runners, Frameworks)</small></h4>
+
+							<div class="progress">
+								<div class="progress-bar" data-progress="90"><span>90%</span></div>
+							</div>
+							<!-- About Progrees Bar End -->
+
 						</div>
 						<!-- About Progrees Items End -->
 					</div>
@@ -321,6 +323,8 @@
 					</div>
 				</div>
 				<!-- About Info End -->
+				<a href="https://gr.linkedin.com/in/zinas" class="btn btn--primary" target="_blank">View my full CV at Linkedin</a>
+
 			</div>
 		</div>
 		<!-- About Area End -->
