Fixed Linkedin button at counter

--- a/index.html
+++ b/index.html
@@ -323,11 +323,22 @@
 					</div>
 				</div>
 				<!-- About Info End -->
-				<a href="https://gr.linkedin.com/in/zinas" class="btn btn--primary" target="_blank">View my full CV at Linkedin</a>
 
 			</div>
 		</div>
 		<!-- About Area End -->
+
+		<!-- Counter Area Start -->
+		<div id="counter" class="" data-parallax-bg-img="img/counter-img/bg.jpg">
+			<div class="container">
+				<div class="row">
+						<a href="https://gr.linkedin.com/in/zinas" class="btn btn--secondary center-block" target="_blank" style="width: 300px; display: block;">View my full CV at Linkedin</a>
+						<br><br>
+				</div>
+			</div>
+		</div>
+		<!-- Counter Area End -->
+
 
 		<!-- Services Area Start -->
 		<div id="services" class="bg--overlay" data-parallax-bg-img="img/services-img/bg.jpg">
@@ -1159,58 +1170,6 @@
 			<!-- Blog Details End -->
 		</div>
 		<!-- Blog Area End -->
-
-		<!-- Counter Area Start -->
-		<div id="counter" class="bg--overlay" data-parallax-bg-img="img/counter-img/bg.jpg">
-			<div class="container">
-				<div class="row">
-					<!-- Counter Item Start -->
-					<div class="col-md-3 col-sm-6 counter--item">
-						<div class="counter--num">
-							<i class="fa fa-flag"></i>
-							<span class="CounterUp">2,500</span>
-						</div>
-
-						<div class="counter--text"><strong>PROJECT</strong> COMPLETED</div>
-					</div>
-					<!-- Counter Item End -->
-
-					<!-- Counter Item Start -->
-					<div class="col-md-3 col-sm-6 counter--item">
-						<div class="counter--num">
-							<i class="fa fa-smile-o"></i>
-							<span class="CounterUp">400</span>
-						</div>
-
-						<div class="counter--text"><strong>HAPPY</strong> CLIENTS</div>
-					</div>
-					<!-- Counter Item End -->
-
-					<!-- Counter Item Start -->
-					<div class="col-md-3 col-sm-6 counter--item">
-						<div class="counter--num">
-							<i class="fa fa-code"></i>
-							<span class="CounterUp">98</span>K
-						</div>
-
-						<div class="counter--text"><strong>LINE</strong> OF <strong>CODE</strong></div>
-					</div>
-					<!-- Counter Item End -->
-
-					<!-- Counter Item Start -->
-					<div class="col-md-3 col-sm-6 counter--item">
-						<div class="counter--num">
-							<i class="fa fa-coffee"></i>
-							<span class="CounterUp">78</span>K
-						</div>
-
-						<div class="counter--text"><strong>CUP</strong> OF <strong>COFFEE</strong></div>
-					</div>
-					<!-- Counter Item End -->
-				</div>
-			</div>
-		</div>
-		<!-- Counter Area End -->
 
 		<!-- Contact Area Start -->
 		<div id="contact">
