started past positions

--- a/index.html
+++ b/index.html
@@ -347,31 +347,9 @@
 			<div class="container">
 				<!-- Section Title Start -->
 				<div class="section--title">
-					<h2><strong>HELPFUL WRITING</strong></h2>
+					<h2><strong>PAST POSITIONS</strong></h2>
 				</div>
 				<!-- Section Title End -->
-
-				<div class="blog--quick-nav clearfix">
-					<button class="toggle--btn btn--default"><i class="fa fa-indent"></i></button>
-
-					<!-- Posts Filter Menu Start -->
-					<div class="posts-filter-menu">
-						<ul>
-							<li><a href="*">All</a></li>
-							<li><a href="ux-design">UX Design</a></li>
-							<li><a href="ui-design">UI Design</a></li>
-							<li><a href="usability">Usability</a></li>
-							<li><a href="interaction-design">Intarection Design</a></li>
-							<li><a href="logo-design">Logo Design</a></li>
-							<li><a href="illustration">Illustration</a></li>
-							<li><a href="typography">Typography</a></li>
-							<li><a href="freelancing">Freelancing</a></li>
-							<li><a href="research">Research</a></li>
-							<li><a href="usability">Publishing</a></li>
-						</ul>
-					</div>
-					<!-- Posts Filter Menu End -->
-				</div>
 
 				<!-- Post Items Start -->
 				<div class="row post-items">
