fixed banner overlay

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 		<!-- Header Area End -->
 
 		<!-- Banner Area Start -->
-		<div id="banner" data-parallax-bg-img="img/banner-img/devit-1.jpg" data-position-y="0px">
+		<div id="banner" data-parallax-bg-img="img/banner-img/devit-1.jpg" data-position-y="0px" class="bg--overlay">
 			<div class="container">
 				<div class="vc--parent">
 					<div class="vc--child">
@@ -779,7 +779,7 @@
 		<!-- Contact Area End -->
 
 		<!-- Map Area Start -->
-		<div id="map" data-latitude="23.790546" data-longitude="90.375583" data-zoom="16"></div>
+		<div id="map" data-latitude="40.609482" data-longitude="22.951776" data-zoom="12"></div>
 		<!-- Map Area End -->
 
 		<!-- Brands Area Start -->
@@ -994,7 +994,7 @@
 	<script src="js/jquery.validate.min.js"></script>
 
 	<!-- ==== Google Map API ==== -->
-	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBK9f7sXWmqQ1E-ufRXV3VpXOn_ifKsDuc"></script>
+	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBf4UH_7l04zA-6FePPGHKupmFhrILVCSM"></script>
 
 	<!-- ==== GMaps Plugin ==== -->
 	<script src="js/gmaps.min.js"></script>
