--- a/index.html
+++ b/index.html
@@ -584,38 +584,12 @@
 		<div id="map" data-latitude="40.609482" data-longitude="22.951776" data-zoom="12"></div>
 		<!-- Map Area End -->
 
-		<!-- Subscribe Area Start -->
-		<div id="subscribe">
-			<div class="container">
-				<div class="row">
-					<div class="col-md-6 col-md-offset-3">
-						<!-- Section Title Start -->
-						<div class="section--title">
-							<h2><strong>SUBSCRIBE TO GET MY NEWSLETTER</strong></h2>
-						</div>
-						<!-- Section Title End -->
-
-						<!-- Subscribe Form Start -->
-						<div class="subscribe--form">
-							<form action="http://themelooks.us12.list-manage.com/subscribe/post?u=50e1e21235cbd751ab4c1ebaa&amp;id=ac81d988e4" method="post"
-								name="mc-embedded-subscribe-form" target="_blank" novalidate="novalidate">
-								<input type="text" value="" name="EMAIL" placeholder="Enter your email address" class="input-box">
-								<input type="submit" value="Subscribe" class="submit--btn btn--default">
-							</form>
-						</div>
-						<!-- Subscribe Form End -->
-					</div>
-				</div>
-			</div>
-		</div>
-		<!-- Subscribe Area End -->
-
 		<!-- Footer Area Start -->
 		<div id="footer">
 			<div class="container">
 				<!-- Footer Copyright Start -->
 				<div class="footer--copyright">
-					<p>Copyright &copy; 2016 <a href="#">CVIT</a>. All Rights Reserved.</p>
+					<p>Copyright &copy; 2016. All Rights Reserved.</p>
 				</div>
 				<!-- Footer Copyright End -->
 			</div>
