--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
 								<div class="about--info-item">
 									<div class="row reset-gutter">
 										<div class="col-xs-4">
-											<p>2016</p>
+											<p>Italy</p>
 											<h5><strong>Milan</strong></h5>
 										</div>
 
@@ -232,7 +232,7 @@
 								<div class="about--info-item">
 									<div class="row reset-gutter">
 										<div class="col-xs-4">
-											<p>2015</p>
+											<p>Greece</p>
 											<h5><strong>Thessaloniki</strong></h5>
 										</div>
 
@@ -249,7 +249,7 @@
 								<div class="about--info-item">
 									<div class="row reset-gutter">
 										<div class="col-xs-4">
-											<p>2014</p>
+											<p>Croatia</p>
 											<h5><strong>Zagreb</strong></h5>
 										</div>
 
