mobile issues fixed

--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@
 						</div>
 
 						<!-- Header Custom Button Start -->
-						<div class="header--custom-btn hidden-sm hidden-xs">
+						<!--<div class="header--custom-btn hidden-sm hidden-xs">
 							<a href="#hireMeModal" class="btn--default" data-toggle="modal">LET'S TALK</a>
-						</div>
+						</div>-->
 						<!-- Header Custom Button End -->
 
 						<!-- Header Nav Start -->
@@ -101,7 +101,7 @@
 							<ul class="nav navbar-nav navbar-right AnimateScroll">
 								<li><a href="#banner">HOME</a></li>
 								<li><a href="#about">ABOUT</a></li>
-								<li><a href="#counter">CV</a></li>
+								<li><a href="#counter">PROFILE</a></li>
 								<li><a href="#blog">WORK</a></li>
 								<li><a href="#contact">CONTACT</a></li>
 							</ul>
