--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
 	<meta name="description" content="">
 	<meta name="author" content="">
 
+	<meta property="og:image" content="http://zin.as/img/banner-img/devit-1.jpg" />
+	<meta property="og:url" content="http://zin.as" />
+	<meta property="og:title" content="Nikos Zinas - Web developer" />
+	<meta property="og:description" content="I'm a web developer based in #Thessaloniki. In my free time, I speak at conferences or help organize community events." />
+
 	<!-- ====Favicons==== -->
 	<link rel="shortcut icon" href="favicon.ico?v=2" type="image/x-icon">
 	<link rel="icon" href="favicon.ico?v=2" type="image/x-icon">
